--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@babel/eslint-parser": "^7.22.15",
     "@commitlint/cli": "^18.2.0",
     "@commitlint/config-conventional": "^18.1.0",
+    "@types/lodash": "^4.14.202",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
     "@vitejs/plugin-vue": "^4.2.3",
